fixing the fint-sizes on mobile for the resume button and the title

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -407,6 +407,16 @@ footer .container {
 
 /* media quaries */
 @media only screen and (max-width: 668px) {
+    .flex-container h1 {
+        font-size: 30px;
+    }
+    #resume-button-section h1{
+        font-size: 24px;
+    }
+    #resume-button-section h1:hover{
+        font-size: 28px;
+        letter-spacing: 8px;
+    }
     .card{
         width: 100%;
     }
@@ -435,7 +445,9 @@ footer .container {
         min-width: 45%;
     }
     .flex-container h3 {
-        font-size: 22px;
+        letter-spacing: 0px;
+        font-size: 18px;
+        font-weight: 400;
     }
 
 }
